--- a/package.json
+++ b/package.json
@@ -12,16 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
+    "@angular/animations": "^5.2.7",
+    "@angular/cdk": "^5.2.3",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.3",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ngrx/effects": "^5.1.0",
+    "@ngrx/entity": "^5.1.0",
+    "@ngrx/router-store": "^5.0.1",
+    "@ngrx/store": "^5.1.0",
+    "@ngrx/store-devtools": "^5.1.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "ngrx-store-freeze": "^0.2.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -29,6 +38,7 @@
     "@angular/cli": "~1.7.1",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@ngrx/schematics": "^5.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
